Enhance e-commerce functionality and UI components
- Added Firebase and numeral libraries for improved data handling and formatting.
- Updated product data structure to include images and quantity for better inventory management.
- Refactored product listing and detail pages to utilize hooks for fetching data and managing loading states.
- Improved cart functionality to prevent exceeding available stock and updated price formatting to local currency.
- Removed unused logo image and adjusted header and footer components for better branding consistency.
- Implemented dynamic category filtering in the shop page and enhanced loading/error states for better user experience.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
@@ -25,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
